# task-board

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
migrations/: 0001_create_boards.down.sql  0001_create_boards.up.sql  0002_dynamic_boards.down.sql  0002_dynamic_boards.up.sql
src/: config.rs  main.rs
src/api/: board_routes.rs  box_routes.rs  config_routes.rs  mod.rs  ws.rs
src/boards/: db.rs  mod.rs
src/boxes/: db.rs  mod.rs
static/: index.html
