[package]
name = "task-board"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "task-board"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.9", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "macros", "migrate", "uuid"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
dotenvy = "0.15"
tokio-tungstenite = "0.21"
tower-http = { version = "0.5", features = ["fs", "cors"] }
futures = "0.3"
dashmap = "5"
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
axum-test = "15"          # high-level HTTP test client for axum
mockall = "0.13"          # optional: mock traits for services/repos